--- a/Box.vcxproj
+++ b/Box.vcxproj
@@ -9,7 +9,7 @@
 #include <GL/glew.h>
 #include <GL/freeglut.h> 
 
-//Deklarasi fungsi Mouse agar gambar 3d dapat diputar putar menggunakan Mouse
+//Deklarasi fungsi Mouse agar gambar 3d dapat diputar-putar
 float xrot = 0;
 float yrot = 0;
 float xdiff = 0;
@@ -35,7 +35,7 @@ void myinit(void) {
     glLineWidth(7.0f);
 }
 
-//Dan selanjutnya yaitu fungsi mouse
+// Fungsi mouse
 void idle()
 {
     if (!mouseDown)
@@ -68,7 +68,7 @@ void mouseMotion(int x, int y)
     }
 }
 
-//Dibawah ini dimulai koding untuk membuat object
+//Coding untuk membuat object
 void tampilan(void) {
     glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
     glLoadIdentity();
@@ -76,7 +76,6 @@ void tampilan(void) {
     glRotatef(xrot, 1, 0, 0);
     glRotatef(yrot, 0, 1, 0);
     glPushMatrix();
-
 
     //ALAS MEJA
     glBegin(GL_POLYGON);//ATAS
