--- a/Box.vcxproj
+++ b/Box.vcxproj
@@ -9,14 +9,14 @@
 #include <GL/glew.h>
 #include <GL/freeglut.h> 
 
-//Deklarasi fungsi Mouse agar gambar 3d dapat diputar-putar
+//Deklarasi fungsi Mouse agar object 3d dapat diputar-putar
 float xrot = 0;
 float yrot = 0;
 float xdiff = 0;
 float ydiff = 0;
 bool mouseDown = false;
 
-//Deklarasi pengaturan lembaran kerja agar Gambar 3d yang kita buat saat diputar atau di geser tidak kemana mana
+//Deklarasi pengaturan lembaran kerja agar object 3d yang kita buat saat diputar atau di geser tidak kemana mana
 void ukur(int lebar, int tinggi) {
     if (tinggi == 0) tinggi = 1;
     glMatrixMode(GL_PROJECTION);
